fix overflow on bookmark card

--- a/ynot-server/y-frontend/src/styles/BookmarkCard.css
+++ b/ynot-server/y-frontend/src/styles/BookmarkCard.css
@@ -19,6 +19,7 @@
   font-family: monospace;
   color: grey;
   text-decoration: underline;
+  overflow-wrap: break-word;
 }
 
 .bookmark-highlight,
